login interface half done?

--- a/SEngBytesBits/web/WEB-INF/web.xml
+++ b/SEngBytesBits/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>Login</servlet-name>
         <servlet-class>Interfaces.Login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Template</servlet-name>
+        <servlet-class>Interfaces.Template</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Template</servlet-name>
+        <url-pattern>/Template</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
